Sat Apr 30 13:20:00 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_fdiv): {Fixnum,Bignum}#fdiv is unified into
	  Integer.

	* bignum.c (rb_big_fdiv): Don't define Bignum#fdiv.

Sat Apr 30 12:25:43 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_int_pow): {Fixnum,Bignum}#** is unified into
	  Integer.

	* bignum.c (rb_big_pow): Don't define Bignum#**.

Sat Apr 30 12:28:59 2016  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_comp): Renamed from rb_big_neg.

	* numeric.c (fix_comp): Renamed from fix_rev.

Sat Apr 30 12:25:43 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_comp): {Fixnum,Bignum}#~ is unified into
	  Integer.

	* bignum.c (rb_big_neg): Don't define Bignum#~.

	* internal.h (rb_big_neg): Declared.

Sat Apr 30 12:07:42 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_and): {Fixnum,Bignum}#& is unified into
	  Integer.

	* bignum.c (rb_big_and): Don't define Bignum#|.

Sat Apr 30 11:56:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread: removed dummy extension library.  thread_sync.c
	  provides "thread.rb" already.

Sat Apr 30 11:53:48 2016  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_or): {Fixnum,Bignum}#| is unified into
	  Integer.

	* bignum.c (rb_big_or): Don't define Bignum#|.

Sat Apr 30 11:18:47 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* vm_trace.c: Fix typos. [ci skip]

Sat Apr 30 10:09:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (establishShell): honor USER environment variable
	  and login name over uid, one pid can be shared by some login
	  names.

Fri Apr 29 22:40:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/maintainers.rdoc (ext/io/nonblock): still maintained, as
	  well as ext/io/wait, which is the origin.

Fri Apr 29 21:18:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* doc/maintainers.rdoc (ext/win32): of course, it's still maintained.

Fri Apr 29 21:03:10 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
